--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,7 +1,8 @@
 *{
-    margin: 0;
-    padding: 0;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+body{
+    overflow: hidden;
 }
 .App{
     display: grid;
@@ -9,6 +10,19 @@
     grid-gap: 15px;
 }
 .Body{
+    margin: 0;
+    padding: 0;
     grid-column: 2 / -1;
     background-color: rgb(206, 211, 197);
+
+}
+input{
+    outline: none;
+}
+textarea{
+    outline: none;
+}
+ul{
+    list-style: none;
+    padding: 0;
 }
