--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -14,6 +14,7 @@
     border-spacing: none;
     align-self: center;
     border: 1px solid rgba(0, 60, 255, .75);
+    border-radius: 5px;
 }
 
 .Dialogs__right_side{
