remove odd files/rows from programm

--- a/src/components/Dialogs/DialogMembers/DialogMembers.module.css
+++ b/src/components/Dialogs/DialogMembers/DialogMembers.module.css
@@ -30,3 +30,8 @@
 .Dialog__member_settings:hover{
     background-color: rgb(225, 225, 231);
 }
+.active{
+    position: relative;
+    font-weight: bold;  
+    font-style: italic;
+}
