--- a/src/components/Users/UsersItem.module.css
+++ b/src/components/Users/UsersItem.module.css
@@ -7,9 +7,7 @@
 }
 .User__follow{
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    flex-direction: column;    
 }
 .User__follow__button{
     background-color: rgba(0, 60, 255, .75);
@@ -20,6 +18,7 @@
     font-size: 16px;
     cursor: pointer;
     transition: 0.5s;
+    width: 75px;
 }
 .User__friend{
     color: gray;
@@ -35,6 +34,7 @@
     font-size: 16px;
     cursor: pointer;
     transition: 0.5s;
+    width: 75px;
 }
 .User__follow__button:hover{
     background-color: rgba(0, 60, 255, .95);
