rearranged json db, now all data come from server, subscribe buttons add or remove users from array, each person now has serarate private arrays with subscribers, followers, dialogs, posts, etc, it was difficult... alot of errors was rised, new filter added in user component, now only 1 return but buttons variable, code becomes less but a bit complicated

--- a/src/components/Profile/Avatar.module.css
+++ b/src/components/Profile/Avatar.module.css
@@ -2,6 +2,9 @@
     max-width: 50px;
     border-radius: 50%;
     cursor: pointer;
-    background-color: olivedrab;
     margin-left: 12px;
+    transition: 0.5s;
+}
+.avatar:hover{
+    box-shadow: 0 0 25px #587f91;
 }
