--- a/src/components/Profile/MyPosts/PostItem.module.css
+++ b/src/components/Profile/MyPosts/PostItem.module.css
@@ -46,19 +46,27 @@
     transition: 0.5s;
 }
 .Post__remove:hover{
-    background-color: rgba(255, 0, 0, 1);
+    background-color: red;
     border: 1px solid white;
+    box-shadow: 0 0 15px red;
 }
 .Post__likes{
     position: absolute;
     display: inline-block;
     bottom: -8px;
-    right: 0;
+    right: 2px;
     text-align: center;
-    color:red;
+    color: black;
     border-radius: 5px;
     font-size: 30px;
+    transition: 0.5s;
+    transform: rotateX(35deg);
     cursor: pointer;
+}
+.Post__likes:hover{
+    color: red;
+    font-size: 35px;
+    transform: rotateX(0deg);
 }
 .Post__likesNum{
     position: absolute;
