--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -22,3 +22,12 @@ ul{
     list-style: none;
     padding: 0;
 }
+.preLoader{
+    position: fixed;
+    left: 50%;
+    bottom: 50%;
+    z-index: 3;
+    border-radius: 50%;
+    width: 100px;
+    opacity: 0.25;
+}
