--- a/src/components/Profile/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo.module.css
@@ -6,13 +6,41 @@
     margin-bottom: 15px;
 }
 .Profile__person_avatar{
+    position: relative;
     grid-column: 1/3;
     grid-row: 1/-1;
     width: 50%;
     border-radius: 50%;
-    background-color: orange;
     margin: 15px 0 0 15px;
 }
+.Profile__person_avatar::after{
+    content: '';
+    font-weight: 900;
+    font-size: 30px;
+    color:rgb(229,235,255);
+    text-align: center;
+    position:absolute;
+    width: 100px;
+    height: 100px;
+    border: 10px solid rgb(229,235,255);
+    border-radius: 50%;
+    background-color: rgb(135,155,192);
+    left: 25%;
+    z-index: 2;
+}
+.Profile__person_avatar::before{
+    content: '';
+    text-align: center;
+    position:absolute;
+    width: 150px;
+    height: 100px;
+    border-radius: 50% 50% 20% 20%;
+    background-color: rgb(135,155,192);
+    left: 20.5%;
+    top: 50%;
+    z-index: 1;
+}
+
 .Profile__person_nm{
     grid-row: 1/2;
     grid-column: 3/5;
