--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -91,6 +91,14 @@
 .User__unfollow__button:hover{
     background-color: rgba(255, 2, 2, 0.95);
 }
+.User__follow__button:disabled{
+    color:lightskyblue;
+    background-color: rgba(49, 49, 49, 0.95);
+}
+.User__unfollow__button:disabled{
+    color:lightskyblue;
+    background-color: rgba(49, 49, 49, 0.95);
+}
 .User__about{
     text-decoration: none;
     color: black;
