--- a/src/components/Profile/MyPosts/PostItem.module.css
+++ b/src/components/Profile/MyPosts/PostItem.module.css
@@ -17,6 +17,14 @@
     width: 40px;
     border-radius: 50%;
 }
+.Post__sender{
+    position: absolute;
+    padding:0;
+    margin:0;
+    color:rgb(77, 77, 77);
+    left:35px;
+    top:0px;
+}
 .Post__content{
     position: relative;
     padding: 10px 0 15px 35px;
@@ -49,6 +57,20 @@
     background-color: red;
     border: 1px solid white;
     box-shadow: 0 0 15px red;
+}
+.Post__remove:disabled{
+    padding:7px 10px 7px 10px;
+    background-color: rgba(77, 77, 77, 0.85);
+    border: 1px solid black;
+    border-radius: 5px;
+    color: white;
+    margin-left: 1%;
+    transition: 0.5s;
+}
+.Post__remove:disabled:hover{
+    background-color: rgb(77, 77, 77);
+    border: 1px solid white;
+    box-shadow: 0 0 15px black;
 }
 .Post__likes{
     position: absolute;
