--- a/src/components/Profile/MyPosts/PostInput.module.css
+++ b/src/components/Profile/MyPosts/PostInput.module.css
@@ -4,19 +4,28 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 10px;
+    width: 60%;
+    margin: 0 auto;
+    padding: 15px 0 15px 0;
+    border: 1px solid black;
+    background-color: rgba(16, 56, 129, 0.25);
 }
 .Input__area{
-    width: 60%;
+    width: 90%;
     padding: 5px;
     margin-bottom: 10px;
 }
+.Input__area:hover{
+    box-shadow: 0 0 15px black;
+    border: 2px solid white;
+}
 .Add__post{
-    background: linear-gradient(white, gray);
-    border: 1px solid white;
-    border-radius: 7px;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    transition: 0.5s;
     padding: 7px;
 }
 .Add__post:hover{
-    border: 1px solid black;
-    background: linear-gradient(gray, white);
+    box-shadow: 0 0 15px black;
 }
