--- a/src/components/Profile/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo.module.css
@@ -17,7 +17,6 @@
     content: '';
     font-weight: 900;
     font-size: 30px;
-    color:rgb(229,235,255);
     text-align: center;
     position:absolute;
     width: 100px;
@@ -25,7 +24,8 @@
     border: 10px solid rgb(229,235,255);
     border-radius: 50%;
     background-color: rgb(135,155,192);
-    left: 25%;
+    top:0;
+    left: 17px;
     z-index: 2;
 }
 .Profile__person_avatar::before{
@@ -36,8 +36,8 @@
     height: 100px;
     border-radius: 50% 50% 20% 20%;
     background-color: rgb(135,155,192);
-    left: 20.5%;
-    top: 50%;
+    left: 5px;
+    top: 100px;
     z-index: 1;
 }
 
@@ -45,8 +45,40 @@
     grid-row: 1/2;
     grid-column: 3/5;
 }
+.Profile__status{
+    position: relative;
+    grid-column: 2/4;
+    text-align: center;
+    font-style: italic;
+    cursor: pointer;
+    width: 80%;
+    justify-self: center;
+}
+.Profile__status:hover{
+    cursor: pointer;
+    transform: rotateY(10deg);
+}
 .Profile__person_info{
     grid-row: 2/3;
     grid-column: 3/5;
     list-style: none;
+}
+.Profile__status_input{
+    grid-column: 2/4;
+    padding: 5px;
+    width: 80%;
+    justify-self: center;
+    border: none;
+    text-align: center;
+    background-color: rgba(135,155,192, .2);
+    cursor: pointer;
+    transition: 0.5s;
+}
+.Profile__status_input:focus{
+    background-color: rgba(255, 255, 255, 0.5);
+    box-shadow: 0 0 15px black;
+    font-size: 15px;
+}
+.Profile__status_input:hover{
+    background-color: rgba(255, 255, 255, 0.5);
 }
