--- a/src/components/LoginWindow/LoginWindow.module.css
+++ b/src/components/LoginWindow/LoginWindow.module.css
@@ -31,6 +31,9 @@
     justify-content: space-evenly;
     align-items: center;
 }
+.LoginWindow_error{
+    border: 1px solid red;
+}
 .LoginWindow__form{
     display: flex;
     position: relative;
@@ -44,6 +47,17 @@
     padding: 0;
 }
 .LoginWindow__description{
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+.LoginWindow__error{
+    position: absolute;
+    font-size: 16px;
+    color: red;
+    width: 100%;
+    bottom: 0;
+    text-align: center;
     margin: 0;
     padding: 0;
 }
@@ -53,5 +67,5 @@
 .LoginWindow__remember::after{
     content: 'Remenber me';
     position: absolute;
-    left: 0;
+    right: 25px;
 }
