--- a/src/components/Avatar/Avatar.module.css
+++ b/src/components/Avatar/Avatar.module.css
@@ -1,5 +1,6 @@
 .avatar{
-    max-width: 50px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     cursor: pointer;
     margin-left: 12px;
