--- a/src/components/Profile/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo.module.css
@@ -10,6 +10,7 @@
     grid-column: 1/3;
     grid-row: 1/-1;
     width: 50%;
+    height: 100%;
     border-radius: 50%;
     margin: 15px 0 0 15px;
 }
@@ -112,4 +113,7 @@
 }
 .Profile__status_input:hover{
     background-color: rgba(255, 255, 255, 0.5);
+}
+a{
+    text-decoration: none;
 }
