--- a/src/components/Photo/Photos.module.css
+++ b/src/components/Photo/Photos.module.css
@@ -1,7 +1,7 @@
 .Photo{
+    position: relative;
     width: 100%;
     height: 250px;
-    background-color: rgba(139, 139, 139, 0.35);
     transition: 0.5s;
     border: none;
     border-radius: 15px;
