--- a/src/components/Photo/PhotosContainer.module.css
+++ b/src/components/Photo/PhotosContainer.module.css
@@ -4,17 +4,18 @@
     grid-gap: 10px;
     padding: 10px;
 }
-.AddNewPhoto{
+.AddNewPhotoButton{
     position: relative;
     width: 100%;
-    height: 250px;
+    height: 100%;
     background-color: rgba(139, 139, 139, 0.35);
     transition: 0.5s;
     border: none;
     border-radius: 15px;
     cursor: pointer;
+    
 }
-.AddNewPhoto::before{
+.AddNewPhotoButton::before{
     content: '';
     position: absolute;
     width: 20px;
@@ -23,7 +24,7 @@
     top: 50%;
     left: 45%;
 }
-.AddNewPhoto::after{
+.AddNewPhotoButton::after{
     content: '';
     position: absolute;
     width: 20px;
@@ -33,7 +34,7 @@
     top: 50%;
     left: 45%;
 }
-.AddNewPhoto:hover{
+.AddNewPhotoButton:hover{
     background-color: rgba(139, 139, 139, 0.5);
     box-shadow: 0 0 5px #587f91;
 }
