--- a/src/components/Photo/PhotoEditor.module.css
+++ b/src/components/Photo/PhotoEditor.module.css
@@ -10,6 +10,9 @@
     border-radius: 15px;
     background-color: rgba(139, 139, 139, 0.45);
 }
+.PhotoEditor__container:hover{
+    box-shadow: 0 0 10px #304650;
+}
 .PhotoEditor__avatar{
     position: absolute;
     top: 15%;
@@ -17,6 +20,7 @@
     font-size: 50px;
     background-color: rgba(233, 233, 233, 0.5);
     border: 1px solid black;
+    color: rgba(16, 56, 129, 0.5);
     border-radius: 50%;
     width: 65px;
     height: 65px;
@@ -24,8 +28,9 @@
     cursor: pointer;
     transition: 0.5s;
 }
-.PhotoEditor__avatar:hover{
+.PhotoEditor__avatar:hover, .PhotoEditor__delete:hover{
     background-color: rgba(233, 233, 233, 1);
+    color: rgba(16, 56, 129, 0.9);
 }
 .PhotoEditor__avatar::after{
     content: 'Set as avatar';
@@ -37,18 +42,42 @@
     font-size: 15px;
     text-align: center;
 }
-.PhotoEditor__delete{
+.PhotoEditor__close{
     position: absolute;
     border: none;
     background-color: none;
     color: rgb(211, 31, 31);
     border-radius: 50%;
     top: 0;
-    right: 0;
+    right: 12px;
     font-size: 45px;
     cursor: pointer;
     transition: 0.5s;
 }
-.PhotoEditor__delete:hover{
+.PhotoEditor__close:hover{
     color: red;
+}
+.PhotoEditor__delete{
+    position: absolute;
+    bottom: 15%;
+    right: 15%;
+    font-size: 35px;
+    background-color: rgba(233, 233, 233, 0.5);
+    border: 1px solid black;
+    border-radius: 50%;
+    width: 65px;
+    height: 65px;
+    text-align: center;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.PhotoEditor__delete::after{
+    content: 'Delete';
+    position: absolute;
+    color: black;
+    bottom: -30%;
+    width: 150px;
+    left: -67.5%;
+    font-size: 15px;
+    text-align: center;
 }
