completed adding messages logic in dialogs, only add new dialogs remaining

--- a/src/components/Dialogs/ChartWindow/ChartMessages/ChartMessages.module.css
+++ b/src/components/Dialogs/ChartWindow/ChartMessages/ChartMessages.module.css
@@ -33,3 +33,14 @@
 .Date__me{
     right: 0;
 }
+.Chart__Loading, .Chart__Choose{
+    position: absolute;
+    color: gray;
+    top: 50%;
+}
+.Chart__Choose{
+    left: 40%;
+}
+.Chart__Loading{
+    left: 45%;
+}
