--- a/src/components/Dialogs/ChartWindow/ChartWindow.module.css
+++ b/src/components/Dialogs/ChartWindow/ChartWindow.module.css
@@ -1,10 +1,11 @@
 .ChartWindow{
+    position: relative;
     list-style: none;
     display: flex;
     flex-direction: column;
     width:100%;
     overflow-y: scroll;
-    max-height: 71vh;
+    height: 71vh;
     border-bottom: 1px solid rgba(0, 60, 255, .25);
 }
 .ChartWidow__head{
