--- a/src/components/Dialogs/ChartWindow/InputMessage/InputMessage.module.css
+++ b/src/components/Dialogs/ChartWindow/InputMessage/InputMessage.module.css
@@ -9,7 +9,7 @@
 .Input__area{
     resize: none;
     width: 85%;
-    height: 5vh;
+    height: 8vh;
     padding: 5px;
     border-radius: 10px;
     transition: 0.5s;
@@ -31,4 +31,5 @@
     border-top: 1px solid white;
     border-bottom:1px solid white;
     background-color: rgba(0, 60, 255, .5);
+    box-shadow: 0 0 10px #587f91;
 }
