--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -58,8 +58,7 @@
     justify-content: space-around;
     height: 80%; 
 }
-.User__follow__button{
-    background-color: rgba(0, 60, 255, .75);
+.User__follow__button, .User__unfollow__button{
     padding: 5px;
     border:none;
     border-radius: 5px;
@@ -69,27 +68,19 @@
     transition: 0.5s;
     width: 75px;
 }
-.User__friend{
-    color: gray;
-    font-style: italic;
-    margin: 0;
+.User__follow__button{
+    background-color: rgba(0, 60, 255, .75);
 }
 .User__unfollow__button{
     background-color: rgba(255, 2, 2, 0.75);
-    padding: 5px;
-    border:none;
-    border-radius: 5px;
-    color:wheat;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.5s;
-    width: 75px;
 }
 .User__follow__button:hover{
     background-color: rgba(0, 60, 255, .95);
+    color:white;
 }
 .User__unfollow__button:hover{
     background-color: rgba(255, 2, 2, 0.95);
+    color:white;
 }
 .User__follow__button:disabled{
     color:lightskyblue;
@@ -98,6 +89,11 @@
 .User__unfollow__button:disabled{
     color:lightskyblue;
     background-color: rgba(49, 49, 49, 0.95);
+}
+.User__friend{
+    color: gray;
+    font-style: italic;
+    margin: 0;
 }
 .User__about{
     text-decoration: none;
