completed settings and reegistration, not so nice like i've supposed, but maybe i will fix it later

--- a/src/components/LoginWindow/LoginWindow.module.css
+++ b/src/components/LoginWindow/LoginWindow.module.css
@@ -69,3 +69,11 @@
     position: absolute;
     right: 25px;
 }
+.LoginWindow__button{
+    padding: 5px 15px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.LoginWindow__register{
+    font-size: 12px;
+}
