Project completed, errors and warning need to be fixed...later

--- a/src/components/Registration/Registration.module.css
+++ b/src/components/Registration/Registration.module.css
@@ -59,3 +59,7 @@
 .Registration__incorrect_input{
     border: 1px solid red;
 }
+.Registration__button:disabled{
+    color:lightskyblue;
+    background-color: rgba(49, 49, 49, 0.95);
+}
